[gd_scene load_steps=16 format=2]

[ext_resource path="res://Bombs/Banana/Banana.gd" type="Script" id=1]
[ext_resource path="res://Bombs/Banana/BANANA_2.png" type="Texture2D" id=2]
[ext_resource path="res://Bombs/Banana/2.png" type="Texture2D" id=3]
[ext_resource path="res://Bombs/Banana/1.png" type="Texture2D" id=4]
[ext_resource path="res://Bombs/Banana/0.png" type="Texture2D" id=5]
[ext_resource path="res://Bombs/Banana/BANANA_0.png" type="Texture2D" id=6]
[ext_resource path="res://Bombs/Banana/BANANA_3.png" type="Texture2D" id=7]
[ext_resource path="res://Bombs/Banana/BANANA_1.png" type="Texture2D" id=8]
[ext_resource path="res://Bombs/Normal/Area2D.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 6 ), null ],
"loop": false,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
size = Vector2( 15, 31 )

[sub_resource type="RectangleShape2D" id=5]
resource_local_to_scene = true
size = Vector2( 16, 15 )

[sub_resource type="RectangleShape2D" id=6]
size = Vector2( 9, 9 )

[node name="Banana" type="RigidBody2D" groups=[
"Bomb",
]]
collision_layer = 16
collision_mask = 54
mode = 3
script = ExtResource( 1 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2( 8, 8 )
frames = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="EXPLOSION" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2( 16, 0 )
z_index = 1
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 8, 8 )
shape = SubResource( 3 )

[node name="Hurt_Box" type="Area2D" parent="."]
position = Vector2( 16, 0 )
monitoring = false
collision_layer = 32
collision_mask = 29

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_Box"]
position = Vector2( -16, 0 )
shape = SubResource( 4 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurt_Box"]
position = Vector2( 15, 16 )
shape = SubResource( 5 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="EXPLOSION" to="." method="_on_EXPLOSION_animation_finished"]
[connection signal="area_entered" from="Hurt_Box" to="." method="_on_Hurt_Box_area_entered"]
[connection signal="body_entered" from="Hurt_Box" to="." method="_on_Hurt_Box_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
